chore: simplify dependabot config using directories specification

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -43,9 +43,15 @@ updates:
         update-types:
           - "major"
 
-  # Example applications dependency management
+  # All sample applications managed together (excluding integrations)
   - package-ecosystem: "npm"
-    directory: "/examples/angular/sample-app"
+    directories:
+      - "/examples/angular/**/*"
+      - "/examples/nextjs/**/*"
+      - "/examples/reactjs/**/*"
+      - "/examples/gatsby/**/*"
+      - "/examples/serverless/**/*"
+      - "/examples/symfony/**/*"
     schedule:
       interval: "cron"
       # every wednesday at 00:01
@@ -67,307 +73,10 @@ updates:
         update-types:
           - "major"
 
+  # All integrations sample applications managed together
   - package-ecosystem: "npm"
-    directory: "/examples/nextjs/hooks/sample-app"
-    schedule:
-      interval: "cron"
-      # every wednesday at 00:01
-      cronjob: "1 0 * * 3"
-    target-branch: "develop"
-    labels:
-      - "dependencies"
-      - "sample-apps"
-    groups:
-      sample-apps-npm-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-      sample-apps-npm-major-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "major"
-
-  - package-ecosystem: "npm"
-    directory: "/examples/nextjs/js/sample-app"
-    schedule:
-      interval: "cron"
-      # every wednesday at 00:01
-      cronjob: "1 0 * * 3"
-    target-branch: "develop"
-    labels:
-      - "dependencies"
-      - "sample-apps"
-    groups:
-      sample-apps-npm-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-      sample-apps-npm-major-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "major"
-
-  - package-ecosystem: "npm"
-    directory: "/examples/nextjs/page-router/sample-app"
-    schedule:
-      interval: "cron"
-      # every wednesday at 00:01
-      cronjob: "1 0 * * 3"
-    target-branch: "develop"
-    labels:
-      - "dependencies"
-      - "sample-apps"
-    groups:
-      sample-apps-npm-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-      sample-apps-npm-major-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "major"
-
-  - package-ecosystem: "npm"
-    directory: "/examples/nextjs/ts/sample-app"
-    schedule:
-      interval: "cron"
-      # every wednesday at 00:01
-      cronjob: "1 0 * * 3"
-    target-branch: "develop"
-    labels:
-      - "dependencies"
-      - "sample-apps"
-    groups:
-      sample-apps-npm-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-      sample-apps-npm-major-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "major"
-
-  - package-ecosystem: "npm"
-    directory: "/examples/reactjs/hooks/sample-app"
-    schedule:
-      interval: "cron"
-      # every wednesday at 00:01
-      cronjob: "1 0 * * 3"
-    target-branch: "develop"
-    labels:
-      - "dependencies"
-      - "sample-apps"
-    groups:
-      sample-apps-npm-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-      sample-apps-npm-major-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "major"
-
-  - package-ecosystem: "npm"
-    directory: "/examples/reactjs/js/sample-app"
-    schedule:
-      interval: "cron"
-      # every wednesday at 00:01
-      cronjob: "1 0 * * 3"
-    target-branch: "develop"
-    labels:
-      - "dependencies"
-      - "sample-apps"
-    groups:
-      sample-apps-npm-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-      sample-apps-npm-major-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "major"
-
-  - package-ecosystem: "npm"
-    directory: "/examples/reactjs/ts/sample-app"
-    schedule:
-      interval: "cron"
-      # every wednesday at 00:01
-      cronjob: "1 0 * * 3"
-    target-branch: "develop"
-    labels:
-      - "dependencies"
-      - "sample-apps"
-    groups:
-      sample-apps-npm-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-      sample-apps-npm-major-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "major"
-
-  - package-ecosystem: "npm"
-    directory: "/examples/reactjs/vite/sample-app"
-    schedule:
-      interval: "cron"
-      # every wednesday at 00:01
-      cronjob: "1 0 * * 3"
-    target-branch: "develop"
-    labels:
-      - "dependencies"
-      - "sample-apps"
-    groups:
-      sample-apps-npm-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-      sample-apps-npm-major-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "major"
-
-  - package-ecosystem: "npm"
-    directory: "/examples/gatsby/sample-gatsby-site"
-    schedule:
-      interval: "cron"
-      # every wednesday at 00:01
-      cronjob: "1 0 * * 3"
-    target-branch: "develop"
-    labels:
-      - "dependencies"
-      - "sample-apps"
-    groups:
-      sample-apps-npm-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-      sample-apps-npm-major-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "major"
-
-  - package-ecosystem: "npm"
-    directory: "/examples/gatsby/sample-gatsby-plugin-usage"
-    schedule:
-      interval: "cron"
-      # every wednesday at 00:01
-      cronjob: "1 0 * * 3"
-    target-branch: "develop"
-    labels:
-      - "dependencies"
-      - "sample-apps"
-    groups:
-      sample-apps-npm-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-      sample-apps-npm-major-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "major"
-
-  - package-ecosystem: "npm"
-    directory: "/examples/serverless/cloudflare-worker"
-    schedule:
-      interval: "cron"
-      # every wednesday at 00:01
-      cronjob: "1 0 * * 3"
-    target-branch: "develop"
-    labels:
-      - "dependencies"
-      - "sample-apps"
-    groups:
-      sample-apps-npm-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-      sample-apps-npm-major-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "major"
-
-  - package-ecosystem: "npm"
-    directory: "/examples/serverless/vercel-edge"
-    schedule:
-      interval: "cron"
-      # every wednesday at 00:01
-      cronjob: "1 0 * * 3"
-    target-branch: "develop"
-    labels:
-      - "dependencies"
-      - "sample-apps"
-    groups:
-      sample-apps-npm-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-      sample-apps-npm-major-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "major"
-
-  - package-ecosystem: "npm"
-    directory: "/examples/symfony/sample"
-    schedule:
-      interval: "cron"
-      # every wednesday at 00:01
-      cronjob: "1 0 * * 3"
-    target-branch: "develop"
-    labels:
-      - "dependencies"
-      - "sample-apps"
-    groups:
-      sample-apps-npm-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-      sample-apps-npm-major-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "major"
-
-  - package-ecosystem: "npm"
-    directory: "/examples/integrations/Ninetailed/sample-apps/app-using-npm"
+    directories:
+      - "/examples/integrations/**/*"
     schedule:
       interval: "cron"
       # every wednesday at 00:01
@@ -378,61 +87,13 @@ updates:
       - "sample-apps"
       - "integrations"
     groups:
-      sample-apps-npm-deps:
+      integrations-sample-apps-npm-deps:
         patterns:
           - "*"
         update-types:
           - "minor"
           - "patch"
-      sample-apps-npm-major-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "major"
-
-  - package-ecosystem: "npm"
-    directory: "/examples/integrations/Ninetailed/sample-apps/app-using-v1.1-cdn"
-    schedule:
-      interval: "cron"
-      # every wednesday at 00:01
-      cronjob: "1 0 * * 3"
-    target-branch: "develop"
-    labels:
-      - "dependencies"
-      - "sample-apps"
-      - "integrations"
-    groups:
-      sample-apps-npm-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-      sample-apps-npm-major-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "major"
-
-  - package-ecosystem: "npm"
-    directory: "/examples/integrations/Ninetailed/sample-apps/app-using-v3-cdn"
-    schedule:
-      interval: "cron"
-      # every wednesday at 00:01
-      cronjob: "1 0 * * 3"
-    target-branch: "develop"
-    labels:
-      - "dependencies"
-      - "sample-apps"
-      - "integrations"
-    groups:
-      sample-apps-npm-deps:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-      sample-apps-npm-major-deps:
+      integrations-sample-apps-npm-major-deps:
         patterns:
           - "*"
         update-types:
