--- a/examples/angular/sample-app/package.json
+++ b/examples/angular/sample-app/package.json
@@ -39,8 +39,7 @@
     "karma-coverage": "2.2.1",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
-    "typescript": "5.9.2"
+    "typescript": "5.8.3"
   },
-  "overrides": {
-  }
+  "overrides": {}
 }
