--- a/examples/angular/sample-app/package.json
+++ b/examples/angular/sample-app/package.json
@@ -39,7 +39,8 @@
     "karma-coverage": "2.2.1",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "user-agent-data-types": "^0.4.2"
   },
   "overrides": {}
 }
