--- a/examples/angular/sample-app/package.json
+++ b/examples/angular/sample-app/package.json
@@ -9,8 +9,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "clean": "rm -rf node_modules package-lock.json dist .angular",
-    "setup": "npm install"
+    "clean": "rm -rf node_modules dist .angular",
+    "setup": "npm install",
+    "clean:fresh": "npm run clean && rm -rf package-lock.json"
   },
   "private": true,
   "dependencies": {
