--- a/examples/integrations/Ninetailed/sample-apps/app-using-npm/package.json
+++ b/examples/integrations/Ninetailed/sample-apps/app-using-npm/package.json
@@ -26,8 +26,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "clean": "rm -rf node_modules package-lock.json dist .next",
-    "setup": "npm install"
+    "clean": "rm -rf node_modules dist .next",
+    "setup": "npm install",
+    "clean:fresh": "npm run clean && rm -rf package-lock.json"
   },
   "browserslist": {
     "production": [
