--- a/examples/nextjs/page-router/sample-app/package.json
+++ b/examples/nextjs/page-router/sample-app/package.json
@@ -7,8 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "clean": "rm -rf node_modules package-lock.json .next",
-    "setup": "npm install"
+    "clean": "rm -rf node_modules .next",
+    "setup": "npm install",
+    "clean:fresh": "npm run clean && rm -rf package-lock.json"
   },
   "dependencies": {
     "@rudderstack/analytics-js": "*",
