--- a/examples/serverless/vercel-edge/package.json
+++ b/examples/serverless/vercel-edge/package.json
@@ -7,8 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "clean": "rm -rf node_modules package-lock.json",
-    "setup": "npm install"
+    "clean": "rm -rf node_modules",
+    "setup": "npm install",
+    "clean:fresh": "npm run clean && rm -rf package-lock.json"
   },
   "dependencies": {
     "@rudderstack/analytics-js-service-worker": "*",
