--- a/examples/nextjs/hooks/sample-app/package.json
+++ b/examples/nextjs/hooks/sample-app/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint",
     "clean": "rm -rf node_modules .next",
     "setup": "npm install",
+    "setup:ci": "npm ci",
+    "verify": "exit 0",
     "clean:fresh": "npm run clean && rm -rf package-lock.json"
   },
   "dependencies": {
