--- a/examples/angular/sample-app/package.json
+++ b/examples/angular/sample-app/package.json
@@ -11,6 +11,8 @@
     "test": "ng test",
     "clean": "rm -rf node_modules dist .angular",
     "setup": "npm install",
+    "setup:ci": "npm ci",
+    "verify": "exit 0",
     "clean:fresh": "npm run clean && rm -rf package-lock.json"
   },
   "private": true,
