--- a/examples/gatsby/sample-gatsby-plugin-usage/package.json
+++ b/examples/gatsby/sample-gatsby-plugin-usage/package.json
@@ -14,6 +14,8 @@
     "serve": "gatsby serve",
     "clean": "rm -rf node_modules public .cache",
     "setup": "npm install",
+    "setup:ci": "npm ci",
+    "verify": "exit 0",
     "clean:fresh": "npm run clean && rm -rf package-lock.json",
     "typecheck": "tsc --noEmit"
   },
