--- a/examples/reactjs/hooks/sample-app/package.json
+++ b/examples/reactjs/hooks/sample-app/package.json
@@ -35,6 +35,8 @@
     "eject": "react-scripts eject",
     "clean": "rm -rf node_modules build",
     "setup": "npm install",
+    "setup:ci": "npm ci",
+    "verify": "exit 0",
     "clean:fresh": "npm run clean && rm -rf package-lock.json"
   },
   "eslintConfig": {
