--- a/examples/reactjs/vite/sample-app/package.json
+++ b/examples/reactjs/vite/sample-app/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview",
     "clean": "rm -rf node_modules dist",
     "setup": "npm install",
+    "setup:ci": "npm ci",
+    "verify": "exit 0",
     "clean:fresh": "npm run clean && rm -rf package-lock.json"
   },
   "dependencies": {
