--- a/examples/angular/sample-app/.env.example
+++ b/examples/angular/sample-app/.env.example
@@ -1,3 +1,4 @@
 # RudderStack Configuration
 NG_APP_RUDDERSTACK_WRITE_KEY=${WRITE_KEY}
-NG_APP_RUDDERSTACK_DATAPLANE_URL=${DATAPLANE_URL} 
+NG_APP_RUDDERSTACK_DATAPLANE_URL=${DATAPLANE_URL}
+NG_APP_RUDDERSTACK_CONFIG_URL=${CONFIG_SERVER_HOST}
