--- a/examples/reactjs/js/sample-app/.env.example
+++ b/examples/reactjs/js/sample-app/.env.example
@@ -1,3 +1,4 @@
 # RudderStack Configuration
 REACT_APP_RUDDERSTACK_WRITE_KEY=${WRITE_KEY}
-REACT_APP_RUDDERSTACK_DATAPLANE_URL=${DATAPLANE_URL} 
+REACT_APP_RUDDERSTACK_DATAPLANE_URL=${DATAPLANE_URL}
+REACT_APP_RUDDERSTACK_CONFIG_URL=${CONFIG_SERVER_HOST} 
