--- a/examples/serverless/cloudflare-worker/.env.example
+++ b/examples/serverless/cloudflare-worker/.env.example
@@ -1,3 +1,4 @@
 # RudderStack Configuration
 RUDDERSTACK_WRITE_KEY=${WRITE_KEY}
-RUDDERSTACK_DATAPLANE_URL=${DATAPLANE_URL} 
+RUDDERSTACK_DATAPLANE_URL=${DATAPLANE_URL}
+RUDDERSTACK_CONFIG_URL=${CONFIG_SERVER_HOST}
