--- a/examples/gatsby/sample-gatsby-plugin-usage/.env.example
+++ b/examples/gatsby/sample-gatsby-plugin-usage/.env.example
@@ -1,3 +1,4 @@
 # RudderStack Configuration
 GATSBY_RUDDERSTACK_WRITE_KEY=${WRITE_KEY}
-GATSBY_RUDDERSTACK_DATAPLANE_URL=${DATAPLANE_URL} 
+GATSBY_RUDDERSTACK_DATAPLANE_URL=${DATAPLANE_URL}
+GATSBY_RUDDERSTACK_CONFIG_URL=${CONFIG_SERVER_HOST}
