--- a/examples/nextjs/page-router/sample-app/package.json
+++ b/examples/nextjs/page-router/sample-app/package.json
@@ -10,7 +10,7 @@
     "clean": "rm -rf node_modules .next",
     "setup": "npm install",
     "setup:ci": "npm ci",
-    "verify": "exit 0",
+    "verify": "node ../../../utils/mock-servers/verify-with-mock.js .",
     "clean:fresh": "npm run clean && rm -rf package-lock.json"
   },
   "dependencies": {
