--- a/examples/nextjs/ts/sample-app/.env.example
+++ b/examples/nextjs/ts/sample-app/.env.example
@@ -1,3 +1,4 @@
 # RudderStack Configuration
 NEXT_PUBLIC_RUDDERSTACK_WRITE_KEY=${WRITE_KEY}
 NEXT_PUBLIC_RUDDERSTACK_DATAPLANE_URL=${DATAPLANE_URL}
+NEXT_PUBLIC_RUDDERSTACK_CONFIG_URL=${CONFIG_SERVER_HOST}
