--- a/examples/reactjs/vite/sample-app/.env.example
+++ b/examples/reactjs/vite/sample-app/.env.example
@@ -1,3 +1,4 @@
 # RudderStack Configuration
 VITE_RUDDERSTACK_WRITE_KEY=${WRITE_KEY}
-VITE_RUDDERSTACK_DATAPLANE_URL=${DATAPLANE_URL} 
+VITE_RUDDERSTACK_DATAPLANE_URL=${DATAPLANE_URL}
+VITE_RUDDERSTACK_CONFIG_URL=${CONFIG_SERVER_HOST}
