--- a/examples/reactjs/vite/sample-app/package.json
+++ b/examples/reactjs/vite/sample-app/package.json
@@ -12,7 +12,7 @@
     "clean": "rm -rf node_modules dist",
     "setup": "npm install",
     "setup:ci": "npm ci",
-    "verify": "exit 0",
+    "verify": "node ../../../utils/mock-servers/verify-with-mock.js .",
     "clean:fresh": "npm run clean && rm -rf package-lock.json"
   },
   "dependencies": {
